2016-06-22 Riccardo Mottola <rm@gnu.org>

	* Preferences.h
	* Preferences.m
	* AppController.m
	* Resources/Preferences.gorm
	Introduce preference tu filter out Share and History objects and use it in Insert and Update PopUps

2016-06-17 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.m
	Visually mark updateable and updated cells.

2016-06-17 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.m
        Make cells editable/noneditable for non-updateable fiels.

2016-06-15 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.m
	Skip udpate list if value did not change, skip non-updateable fields.

2016-06-13 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.h
        * DBObjectInspector.m
        * English.lproj/ObjectInspector.nib
        Edit values and Update from object inspector.

2016-04-19 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	Set batch sizes when instantiating DBSoap.

2016-03-16 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Reset UI after insert completion

2015-12-11 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Fix Preferences defaults, do not set them wrongly on panel show.

2015-09-03 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Separate exception panel show in separate method and always call it on main thread (or sometimes old exception was shown).

2015-06-04 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Expose alert panels from main thread.

2015-06-04 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Reset gui  if an file creation error occours.

2015-04-28 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* English.lproj/MainMenu.nib/keyedobjects.nib
	Add 100 and 200 sizes.

2015-04-28 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Pools need to be drained, not released, since they don't get retained.

2015-04-23 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	Stop support in delete.

2015-04-23 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m