@@ -1,7 +1,7 @@
 {
     IBClasses = (
         {
-            ACTIONS = {loadObject = id; updateObject = id; }; 
+            ACTIONS = {loadObject = id; search = id; updateObject = id; }; 
             CLASS = DBObjectInspector; 
             LANGUAGE = ObjC; 
             OUTLETS = {
@@ -9,6 +9,8 @@
                 faultTextView = NSTextView; 
                 fieldObjId = NSTextField; 
                 fieldTable = NSTableView; 
+                searchField = NSSearchField; 
+                statusField = NSTextField; 
                 updateButton = NSButton; 
                 winObjInspector = NSWindow; 
             }; 
